ECS_stack/vpc01.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: EC2 ECS cluster running containers in a private subnet. Supports
             public facing load balancers, private internal load balancers, and
             both internal and external service discovery namespaces.
Parameters:
  EnvironmentName:
    Type: String
    Default: 'ks-dev'
    Description: "A friendly environment name that will be used for namespacing all cluster resources. Example: staging, qa, or production"
    AllowedValues: ['ks-dev','ks-stg','ks-prd']

  NatInstanceType:
    Type: String
    Default: t3a.nano
    Description: "Nat Instance"
    AllowedValues: [t3a.nano]
    ConstraintDescription: Please choose a valid instance type.
Mappings:
  # Hard values for the subnet masks. These masks define
  # the range of internal IP addresses that can be assigned.
  # The VPC can have all IP's from 10.0.0.0 to 10.0.255.255
  # There are four subnets which cover the ranges:
  #
  # 10.0.0.0 - 10.0.0.255
  # 10.0.1.0 - 10.0.1.255
  # 10.0.2.0 - 10.0.2.255
  # 10.0.3.0 - 10.0.3.255
  #
  # If you need more IP addresses (perhaps you have so many
  # instances that you run out) then you can customize these
  # ranges to add more
  SubnetConfig:
    VPC:
      CIDR: '10.0.0.0/16'
    PublicOne:
      CIDR: '10.0.1.0/24'
    PublicTwo:
      CIDR: '10.0.2.0/24'
    PrivateOne:
      CIDR: '10.0.3.0/24'
    PrivateTwo:
      CIDR: '10.0.4.0/24'

  NatAMIConfig:
    ap-south-1:
      AMI: "ami-02040dc016bd518ea"
    us-east-1:
      AMI: "ami-09e37faebf1206500"

Resources:
  # VPC in which containers will be networked.
  # It has two public subnets, and two private subnets.
  # We distribute the subnets across the first two available subnets
  # for the region, for high availability.
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock: !FindInMap ['SubnetConfig', 'VPC', 'CIDR']
      Tags:
        - Key: Name
          Value: !Join ['-', [ !Ref EnvironmentName, 'vpc']]

  # Two public subnets, where containers can have public IP addresses
  PublicSubnetOne:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
         Fn::Select:
         - 0
         - Fn::GetAZs: {Ref: 'AWS::Region'}
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PublicOne', 'CIDR']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Join ['-', [ !Ref EnvironmentName, 'public-subnet-1']]

  PublicSubnetTwo:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
         Fn::Select:
         - 1
         - Fn::GetAZs: {Ref: 'AWS::Region'}
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PublicTwo', 'CIDR']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Join ['-', [ !Ref EnvironmentName, 'public-subnet-2']]

  # Two private subnets where containers will only have private
  # IP addresses, and will only be reachable by other members of the
  # VPC
  PrivateSubnetOne:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
         Fn::Select:
         - 0
         - Fn::GetAZs: {Ref: 'AWS::Region'}
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PrivateOne', 'CIDR']
      Tags:
        - Key: Name
          Value: !Join ['-', [ !Ref EnvironmentName, 'private-subnet-1']]

  PrivateSubnetTwo:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
         Fn::Select:
         - 1
         - Fn::GetAZs: {Ref: 'AWS::Region'}
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PrivateTwo', 'CIDR']
      Tags:
        - Key: Name
          Value: !Join ['-', [ !Ref EnvironmentName, 'private-subnet-2']]

  # Setup networking resources for the public subnets. Containers
  # in the public subnets have public IP addresses and the routing table
  # sends network traffic via the internet gateway.
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Join ['-', [ !Ref EnvironmentName, 'ig']]

  GatewayAttachement:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref 'VPC'
      InternetGatewayId: !Ref 'InternetGateway'
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Name
          Value: !Join ['-', [ !Ref EnvironmentName, 'public']]
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: GatewayAttachement
    Properties:
      RouteTableId: !Ref 'PublicRouteTable'
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref 'InternetGateway'
  PublicSubnetOneRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetOne
      RouteTableId: !Ref PublicRouteTable
  PublicSubnetTwoRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetTwo
      RouteTableId: !Ref PublicRouteTable

  # Setup networking resources for the private subnets. Containers
  # in these subnets have only private IP addresses, and must use a NAT
  # gateway to talk to the internet. We launch two NAT gateways, one for
  # each private subnet.
  
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref "VPC"
      Tags:
        - Key: Name
          Value: !Join ["-", [!Ref EnvironmentName, "private", "table"]]

  PrivateRoute:
    Type: AWS::EC2::Route
    DependsOn:
      - NatInstance
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      InstanceId: !Ref NatInstance

  PrivateSubnetOneRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetOne
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnetTwoRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetTwo
      RouteTableId: !Ref PrivateRouteTable

  #PrivateRouteTableOne:
  #  Type: AWS::EC2::RouteTable
  #  Properties:
  #    VpcId: !Ref 'VPC'
  #    Tags:
  #      - Key: Name
  #        Value: !Join ['-', [ !Ref EnvironmentName, 'private-1']]

  #PrivateRouteOne:
  #  Type: AWS::EC2::Route
  #  Properties:
  #    RouteTableId: !Ref PrivateRouteTableOne
  #    DestinationCidrBlock: 0.0.0.0/0
  #    NatGatewayId: !Ref NatGatewayOne

  #PrivateRouteTableOneAssociation:
  #  Type: AWS::EC2::SubnetRouteTableAssociation
  #  Properties:
  #    RouteTableId: !Ref PrivateRouteTableOne
  #    SubnetId: !Ref PrivateSubnetOne
  #PrivateRouteTableTwo:
  #  Type: AWS::EC2::RouteTable
  #  Properties:
  #    VpcId: !Ref 'VPC'
  #    Tags:
  #      - Key: Name
  #        Value: !Join ['-', [ !Ref EnvironmentName, 'private-2']]
  #PrivateRouteTwo:
  #  Type: AWS::EC2::Route
  #  Properties:
  #    RouteTableId: !Ref PrivateRouteTableTwo
  #    DestinationCidrBlock: 0.0.0.0/0
  #    NatGatewayId: !Ref NatGatewayTwo

  #PrivateRouteTableTwoAssociation:
  #  Type: AWS::EC2::SubnetRouteTableAssociation
  #  Properties:
  #    RouteTableId: !Ref PrivateRouteTableTwo
  #    SubnetId: !Ref PrivateSubnetTwo

  # ECS Resources
  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles: [!Ref 'EC2Role']

  # A role used to allow AWS Autoscaling to inspect stats and adjust scaleable targets
  # on your AWS account
  AutoscalingRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Join ['-', [ !Ref EnvironmentName, 'autoscaling','role', !Sub '-${AWS::Region}']]
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service: [application-autoscaling.amazonaws.com]
          Action: ['sts:AssumeRole']
      Path: /
      Policies:
      - PolicyName: service-autoscaling
        PolicyDocument:
          Statement:
          - Effect: Allow
            Action:
              - 'application-autoscaling:*'
              - 'cloudwatch:DescribeAlarms'
              - 'cloudwatch:PutMetricAlarm'
              - 'ecs:DescribeServices'
              - 'ecs:UpdateService'
            Resource: '*'

  # Role for the EC2 hosts. This allows the ECS agent on the EC2 hosts
  # to communciate with the ECS control plane, as well as download the docker
  # images from ECR to run on your host.
  EC2Role:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Join ['-', [ !Ref EnvironmentName, 'ec2','role',!Sub '-${AWS::Region}']]
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service: [ec2.amazonaws.com]
          Action: ['sts:AssumeRole']
      Path: /
      Policies:
      - PolicyName: ecs-service
        PolicyDocument:
          Statement:
          - Effect: Allow
            Action:
              - 'ecs:CreateCluster'
              - 'ecs:DeregisterContainerInstance'
              - 'ecs:DiscoverPollEndpoint'
              - 'ecs:Poll'
              - 'ecs:RegisterContainerInstance'
              - 'ecs:StartTelemetrySession'
              - 'ecs:Submit*'
              - 'logs:CreateLogStream'
              - 'logs:PutLogEvents'
              - 'ecr:GetAuthorizationToken'
              - 'ecr:BatchGetImage'
              - 'ecr:GetDownloadUrlForLayer'
            Resource: '*'

  # This is an IAM role which authorizes ECS to manage resources on your
  # account on your behalf, such as updating your load balancer with the
  # details of where your containers are, so that traffic can reach your
  # containers.
  ECSRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Join ['-', [ !Ref EnvironmentName, 'ecs','role',!Sub '-${AWS::Region}']]
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service: [ecs.amazonaws.com]
          Action: ['sts:AssumeRole']
      Path: /
      Policies:
      - PolicyName: ecs-service
        PolicyDocument:
          Statement:
          - Effect: Allow
            Action:
              # Rules which allow ECS to attach network interfaces to instances
              # on your behalf in order for awsvpc networking mode to work right
              - 'ec2:AttachNetworkInterface'
              - 'ec2:CreateNetworkInterface'
              - 'ec2:CreateNetworkInterfacePermission'
              - 'ec2:DeleteNetworkInterface'
              - 'ec2:DeleteNetworkInterfacePermission'
              - 'ec2:Describe*'
              - 'ec2:DetachNetworkInterface'

              # Rules which allow ECS to update load balancers on your behalf
              # with the information sabout how to send traffic to your containers
              - 'elasticloadbalancing:DeregisterInstancesFromLoadBalancer'
              - 'elasticloadbalancing:DeregisterTargets'
              - 'elasticloadbalancing:Describe*'
              - 'elasticloadbalancing:RegisterInstancesWithLoadBalancer'
              - 'elasticloadbalancing:RegisterTargets'
            Resource: '*'

  EFSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: FileSystem Security Group
      VpcId: !Ref 'VPC'
      GroupName: !Join ['-', [ !Ref EnvironmentName,'efs','sg','common']]
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: 2049
          ToPort: 2049
          CidrIp: !FindInMap ["SubnetConfig", "PrivateOne", "CIDR"]
          Description: "Internal Traffic"
        - IpProtocol: "tcp"
          FromPort: 2049
          ToPort: 2049
          CidrIp: !FindInMap ["SubnetConfig", "PrivateTwo", "CIDR"]
          Description: "Internal Traffic"
        - IpProtocol: "tcp"
          FromPort: 2049
          ToPort: 2049
          CidrIp: !FindInMap ['SubnetConfig', 'PublicOne', 'CIDR']
          Description: "Internal Traffic"
        - IpProtocol: "tcp"
          FromPort: 2049
          ToPort: 2049
          CidrIp: !FindInMap ['SubnetConfig', 'PublicTwo', 'CIDR']
          Description: "Internal Traffic"
      Tags:
        - Key: Name
          Value: !Join ['-', [ !Ref EnvironmentName,'efs','sg']]


  NatInstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Access to the nat instnace
      GroupName: !Join ["-", [!Ref EnvironmentName, "nat", "sg"]]
      SecurityGroupIngress:
        - CidrIp: !FindInMap ["SubnetConfig", "PrivateOne", "CIDR"]
          IpProtocol: -1
        - CidrIp: !FindInMap ["SubnetConfig", "PrivateTwo", "CIDR"]
          IpProtocol: -1
        #ssh access
        - CidrIp: 65.0.157.21/32
          FromPort: 22
          ToPort: 22
          IpProtocol: tcp
          Description: "Amazon VPN Mumbai"
        - CidrIp: 122.169.116.140/32
          FromPort: 22
          ToPort: 22
          IpProtocol: tcp
          Description: "Airtel Mumbai Office"
        - CidrIp: 103.208.224.230/32
          FromPort: 22
          ToPort: 22
          IpProtocol: tcp
          Description: "BlazeNet Mumbai Office"

      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-nat-sg

  NatInstance:
    Type: AWS::EC2::Instance
    DependsOn: NatInstanceSecurityGroup
    Properties:
      InstanceType: !Ref NatInstanceType
      ImageId: !FindInMap [NatAMIConfig, Ref: "AWS::Region", AMI]
      SourceDestCheck: false
      KeyName: !Sub ${EnvironmentName}
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-nat-instance
      BlockDeviceMappings:
        - 
          DeviceName: '/dev/xvda'
          Ebs:
            VolumeSize: 8
            VolumeType: "standard"
            Encrypted: true

      NetworkInterfaces:
        - SubnetId: !Ref PublicSubnetOne
          GroupSet:
            - !Ref NatInstanceSecurityGroup
          AssociatePublicIpAddress: true
          DeviceIndex: 0

  NatElasticIP:
    Type: AWS::EC2::EIP
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-nat-eip

  NatIPAssoc:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: !Ref "NatInstance"
      EIP: !Ref "NatElasticIP"


  RDSSubnetGroup:
    Type: "AWS::RDS::DBSubnetGroup"
    Properties:
      DBSubnetGroupDescription: !Join ["-", [!Ref EnvironmentName, "rds-subnet-gp"]]
      DBSubnetGroupName: !Join ["-", [!Ref EnvironmentName, "rds-subnet-gp"]]
      SubnetIds:
        - !Ref PrivateSubnetOne
        - !Ref PrivateSubnetTwo
      Tags:
        - Key: Name
          Value: !Sub "${EnvironmentName}-rds-subnet-gp"

  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Access to the rds
      GroupName: !Join ["-", [!Ref EnvironmentName, "rds", "sg"]]
      SecurityGroupIngress:
        - CidrIp: !FindInMap ["SubnetConfig", "PrivateOne", "CIDR"]
          FromPort: 3306
          ToPort: 3306
          IpProtocol: tcp
          Description: "APP CIDR"
        - CidrIp: !FindInMap ["SubnetConfig", "PrivateTwo", "CIDR"]
          FromPort: 3306
          ToPort: 3306
          IpProtocol: tcp
          Description: "APP CIDR"
        - CidrIp: !FindInMap ['SubnetConfig', 'PublicOne', 'CIDR']
          FromPort: 3306
          ToPort: 3306
          IpProtocol: tcp
          Description: 'External Login'
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-rds-sg


  RedisSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Access to the rds
      GroupName: !Join ["-", [!Ref EnvironmentName, "redis-mongo", "sg"]]
      SecurityGroupIngress:
        - CidrIp: !FindInMap ["SubnetConfig", "PrivateOne", "CIDR"]
          FromPort: 6379
          ToPort: 6379
          IpProtocol: tcp
          Description: "APP CIDR"
        - CidrIp: !FindInMap ["SubnetConfig", "PrivateTwo", "CIDR"]
          FromPort: 6379
          ToPort: 6379
          IpProtocol: tcp
          Description: "APP CIDR"
        - CidrIp: !FindInMap ["SubnetConfig", "PrivateOne", "CIDR"]
          FromPort: 27017
          ToPort: 27017
          IpProtocol: tcp
          Description: "APP CIDR"
        - CidrIp: !FindInMap ["SubnetConfig", "PrivateTwo", "CIDR"]
          FromPort: 27017
          ToPort: 27017
          IpProtocol: tcp
          Description: "APP CIDR"
        - CidrIp: !FindInMap ['SubnetConfig', 'VPC', 'CIDR']
          FromPort: 6379
          ToPort: 6379
          IpProtocol: tcp
          Description: 'External Login'
        - CidrIp: !FindInMap ['SubnetConfig', 'VPC', 'CIDR']
          FromPort: 22
          ToPort: 22
          IpProtocol: tcp
          Description: 'SSH'
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-redis-mongo-sg



# These are the values output by the CloudFormation template. Be careful
# about changing any of them, because of them are exported with specific
# names so that the other task related CF templates can use them.
Outputs:
  AutoscalingRole:
    Description: The ARN of the role used for autoscaling
    Value: !GetAtt 'AutoscalingRole.Arn'
    Export:
      Name: !Sub ${EnvironmentName}:AutoscalingRole
  ECSRole:
    Description: The ARN of the ECS role
    Value: !GetAtt 'ECSRole.Arn'
    Export:
      Name: !Sub ${EnvironmentName}:ECSRole
  VpcId:
    Description: The ID of the VPC that this stack is deployed in
    Value: !Ref 'VPC'
    Export:
      Name: !Sub ${EnvironmentName}:VpcId
  PublicSubnetOne:
    Description: Public subnet one
    Value: !Ref 'PublicSubnetOne'
    Export:
      Name: !Sub ${EnvironmentName}:PublicSubnetOne
  PublicSubnetTwo:
    Description: Public subnet two
    Value: !Ref 'PublicSubnetTwo'
    Export:
      Name: !Sub ${EnvironmentName}:PublicSubnetTwo
  PrivateSubnetOne:
    Description: Private subnet one
    Value: !Ref 'PrivateSubnetOne'
    Export:
      Name: !Sub ${EnvironmentName}:PrivateSubnetOne
  PrivateSubnetTwo:
    Description: Private subnet two
    Value: !Ref 'PrivateSubnetTwo'
    Export:
      Name: !Sub ${EnvironmentName}:PrivateSubnetTwo
  EC2Role:
    Description: A security group used to allow containers to receive traffic
    Value: !GetAtt 'EC2Role.Arn'
    Export:
      Name: !Sub ${EnvironmentName}:EC2Role
  EC2InstanceProfile:
    Description: A security group used to allow containers to receive traffic
    Value: !GetAtt 'EC2InstanceProfile.Arn'
    Export:
      Name: !Sub ${EnvironmentName}:EC2InstanceProfile
  EFSSecurityGroup:
    Description: EFS SecurityGroup
    Value: !Ref 'EFSSecurityGroup'
    Export:
      Name: !Sub ${EnvironmentName}:EFSSecurityGroup
